New Crowdin updates (#195)
* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Russian)

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* New translations en_us.json (French)

* New translations en_us.json (Chinese Traditional)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Chinese Traditional)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* New translations en_us.json (French)

* New translations en_us.json (Chinese Traditional)

* New translations en_us.json (Portuguese, Brazilian)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Spanish)

* New transla

--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1119,6 +1119,8 @@
   "ConfirmEgoistOnEject": "Confirmar <color=#5600ff>Egoístas</color> nas ejeções",
   "ConfirmLoversOnEject": "Confirmar <color=#ff9ace>Amantes</color> nas ejeções",
   "ShowTeamNextToRoleNameOnEject": "Mostrar em qual facção está a função do jogador expulso",
+  "HnSUnloadWarning": "<#ffff00><b>AVISO:</b>\\</color>\\nEHR não suporta o modo Esconde-Esconde original e será descarregado se você o ativar.\\nVocê pode usar o modo Esconde-Esconde Personalizado do EHR com funções exclusivas.",
+  "RejoinRequiredDueToVanillaSwitch": "Você decidiu alternar para o modo vanilla, por isso era necessário desconectá-lo do jogo atual ou isso teria causado problemas. Por favor, volte ao jogo.",
   "Addon": "Atributo",
   "Ban": "Banir",
   "Kick": "Expulsar",
@@ -1374,6 +1376,7 @@
   "LovingImpostorSpawnChance": "Chance de um <color=#ff9ace>Amante</color> <#ff1919>Impostor</color> aparecer",
   "LIRoleForOtherImps": "Outros <#ff1919>Impostores</color> veem o <#ff9ace>Amante</color> <#ff1919>Impostor</color> como",
   "PrivateChat": "Habilitar Chat Privado para <color=#ff9ace>Amantes</color> (EXPERIMENTAL!!!!)</color>",
+  "PrivateChatForLoversOnly": "Tentar fazer o chat ficar visível apenas para os Amantes ao em vez de todos <#ffff00>(BEM MAIS EXPERIMENTAL)</color>",
   "GuessAbility": "Adivinhadores podem adivinhar <color=#ff9ace>Amantes</color>",
   "AddonCanBeGuessed": "Pode ser adivinhado",
   "ConvertedAddonCanBeGuessed": "{role} pode ser adivinhado",
@@ -1555,6 +1558,7 @@
   "MessengerMessage.3": "Eu era um {0}",
   "MessengerTitle": "<#ff0000>Mensagem de {0}</color>",
   "DisableLobbyMusic": "Desativar Música do Lobby",
+  "EnableCommandHelper": "Ativar Auxiliar de Comando",
   "Evolver": "Melhorador",
   "EvolverInfo": "Selecione uma melhora após cada reunião",
   "EvolverInfoLong": "(Neutros):\\nComo Melhorador, você pode escolher uma melhora após cada reunião. Acaricie seu pet para ciclar entre as melhoras. A mesma melhora pode aparecer múltiplas vezes. Assim que o tempo para escolher se esgotar, sua melhora será aplicada.\n\n<size=70%><b><u>Melhoras:</u></b>\n- Recarga de Abate Reduzida (em 2.5s)\n- Obter visão de Impostor (não é afetada pela sabotagem de luz)\n- Aumentar visão (em 0.4x)\n- Aumentar velocidade (em 0.25x)\n- Aumentar distância de abate (Curta → Média → Longa)\n- Obter habiilidade de usar dutos (e 1 uso)\n- Aumentar limite de uso de dutos (em 3)\n- Obter habilidade de sabotar (e 1 uso)\n- Aumentar limite de sabotagens (em 2)\n- Obter Escudo (não será possível matar o Melhorador na rodada atual)</size>\n\n<u><b>Notas:</b></u>\nCaso você possa usar dutos, o limite de usos de duto será mostrado próximo a sua função, assim: <b>(V: 1)</b> - O mesmo se aplica ao limite de sabotagens: <b>(S: 2)</b>",
@@ -1783,6 +1787,7 @@
   "DeathReason.Negotiation": "Negociado",
   "DeathReason.Trapped": "Armadilhado",
   "DeathReason.Stung": "Picado",
+  "DeathReason.Scavenged": "Enterrado",
   "DeathReason.Meteor": "Chuva de Meteoros",
   "DeathReason.Lava": "Lava",
   "DeathReason.Tornado": "Tornado",
@@ -1797,6 +1802,8 @@
   "ND_DRLaughMessage.Drowned": "Você disse que estava com sede, certo? Aqui está um pouco de água!",
   "ND_DRLaughMessage.Sunken": "Você sabia que o Titanic foi afundado por um buraco? Bem, agora você sabe!",
   "ND_DRLaughMessage.Collapsed": "Foi como nos filmes, certo? Sabe, quando o prédio cai e todo mundo morre!",
+  "LoversChatCannotTalkMsg": "Este é um chat para apenas <color=#ff9ace>Amantes</color>!",
+  "LoversChatCannotTalkTitle": "<#ffff00>⚠ ➡</color> <#ff0000>VOCÊ NÃO PODE FALAR AQUI</color> <#ffff00>⬅ ⚠</color>",
   "Alive": "Vivo",
   "Win": " Vence!",
   "Last-": "Último ",
@@ -2179,7 +2186,6 @@
   "Warning.NoModHost": "Mod EHR não está instalado no anfitrião.",
   "Warning.MismatchedVersion": "<b>{0}</b> tem uma versão diferente de <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "O anfitrião não possui ou tem uma versão diferente de {0}\nVocê será expulso em {1}",
-  "Warning.OneMinuteLeft": "<#ffff00>O Lobby irá fechar em 1 Minuto!</color>",
   "Commands.NoAccess": "Você não tem acesso a esse comando ou não pode usá-lo atualmente",
   "CommandDescription.LT": "Ver o temporizador do lobby",
   "CommandDescription.Dump": "Salva um arquivo Log no Desktop",
@@ -2466,7 +2472,7 @@
   "TabInfo.Addons": "Configurações para Complementos",
   "TabInfo.OtherRoles": "Configurações para papéis de fantasma",
   "TabInfo.TaskSettings": "Modificadas, configurações específicas que têm um grande impacto no jogo",
-  "TabInfoTip": "<b>Dica:</b> segure SHIFT para ajustar o número de valores de 5 ou CTRL para ajustar em 10!",
+  "TabInfoTip": "<b>Dica:</b> Segure SHIFT para ajustar o número de valores por 5 ou CTRL para ajustar por 10! Mude os modos de jogo usando o botão de seta acima desta mensagem!",
   "OtherRoles.CrewmateRoles": "★ Funções de Tripulantes",
   "OtherRoles.NeutralRoles": "★ Funções Neutras",
   "OtherRoles.ImpostorRoles": "★ Funções de Impostores",
@@ -4200,6 +4206,8 @@
   "TimeDecreaseOnShortTaskComplete": "Ao completar uma tarefa curta, Reduza o tempo de jogo por",
   "TimeDecreaseOnCommonTaskComplete": "Ao completar uma tarefa comum, Reduza o tempo de jogo por",
   "TimeDecreaseOnLongTaskComplete": "Ao completar uma tarefa longa, Reduza o tempo de jogo por",
+  "TimeDecreaseOnSituationalTaskComplete": "Ao completar uma tarefa situacional, Reduza o tempo de jogo por",
+  "TimeDecreaseOnOtherTaskComplete": "Quando completar uma tarefa que não cabe em nenhuma categoria, reduza o tempo de jogo por",
   "SeekerVision": "Visão do Procurador",
   "HiderVision": "Visão do Escondido",
   "SeekerSpeed": "Velocidade do Procurador",
@@ -4462,8 +4470,8 @@
   "RookieInfoLong": "(Atributos):\nVocê não pode matar na primeira rodada.",
   "Prefix.Rookie": "Iniciante",
   "Trainee": "Aprendiz",
-  "TraineeInfo": "Você Não Pode Dutar/Sabotar/Metamorfar/Pet durante a primeira rodada",
-  "TraineeInfoLong": "(Complementos):\\nVocê não pode usar os dutos, sabotar, transformar, ou usar o pet na primeira rodada.",
+  "TraineeInfo": "Você Não Pode Dutar/Sabotar/Metamorfar/Usar Pet durante a primeira rodada",
+  "TraineeInfoLong": "(Atributos):\\nVocê não pode usar os dutos, sabotar, transformar, ou usar o pet na primeira rodada.",
   "Prefix.Trainee": "Aprendiz",
   "TraineeNotify": "<#ffff00>Como o <#4287f5>Aprendiz</color>, você não pode usar os dutos, sabotar, transformar, ou usar o pet na primeira rodada!</color>",
   "Soothsayer": "Adivinho",
@@ -4565,6 +4573,7 @@
   "AntidoteCDOpt": "Diminuir a Recarga para",
   "AntidoteCDReset": "Recarga volta ao normal após a reunião",
   "HackButtonText": "Hackear",
+  "BomberCooldownsResetEachOther": "O tempo de recarga da matar e o tempo de recarga da bomba reiniciam-se mutuamente quando usados",
   "BomberDiesInExplosion": "O <color=#ff1919>Bombardeiro</color> morre ao explodir",
   "ImpostorsSurviveBombs": "<color=#ff1919>Impostores</color> sobrevivem à bomba",
   "NukeRadius": "Distância da Bomba Nuclear (12x é bem longe)",
