--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -155,7 +155,7 @@
   "Refugee": "Отступник",
   "Underdog": "Аутсайдер",
   "Luckey": "Счастливчик",
-  "Needy": "Ленивый Парень",
+  "Needy": "Ленивец",
   "SuperStar": "Суперзвезда",
   "CyberStar": "Знаменитость",
   "Demolitionist": "Подрывник",
@@ -616,14 +616,14 @@
   "WarlockInfoLong": "(Предатель):\\nКак Колдун, вы можете убивать обычным способом и с помощью проклятия. Если морфнуться/погладить питомца, проклятый игрок телепортируется к ближайшему игроку и убьёт его.\\nОдно нажатие кнопки убийства - проклятие, два нажатия - обычное убийство.\\nУ вас три разных перезарядки - убийства, проклятия и убийства с помощью проклятого игрока (морфа). Каждое действие сбрасывает все остальные перезарядка.\\nИсключение: проклятие не сбрасывает перезарядку убийства с помощью проклятого игрока.\\nТолько один игрок может быть проклят в одно и то же время. Проклятие на игроке сбрасывается после собрания и после убийства с помощью этого же игрока.",
   "ZombieInfoLong": "(Предатель):\\nКак Зомби, у вас очень низкая перезарядка убийства, но вы очень медленные и с каждым убийством становитесь ещё медленнее (зависит от настроек). Тем не менее вас нельзя выкинуть на собраниях.\\nИсключение: Диктатор может выкинуть Зомби.",
   "AssassinInfoLong": "(Предатель):\\nКак Ниндзя, вы можете использовать свою кнопку убийства, чтобы пометить игрока. Затем, вы должны морфнуться/погладить питомца, чтобы телепортироваться к помеченному игроку и убить его. Вы не можете убивать обычным способом, но, в зависимости от настроек, вы можете убивать нормально ПОСЛЕ убийства помеченного игрока.",
-  "HackerInfoLong": "(Предатель):\\nКак Аноним, вы можете морфнуться, чтобы взломать выбранного в меню морфа игрока. Взломанный игрок мгновенно совершит саморепорт, даже если трупов ещё нет. Пытаться взломать Ленивого Парня или Ленивого - пустая трата времени.",
+  "HackerInfoLong": "(Предатель):\\nКак Аноним, вы можете морфнуться, чтобы взломать выбранного в меню морфа игрока. Взломанный игрок мгновенно совершит саморепорт, даже если трупов ещё нет. Пытаться взломать Ленивца или Ленивого - пустая трата времени.",
   "MinerInfoLong": "(Предатель):\\nКак Шахтёр, вы можете морфнуться/погладить питомца, чтобы телепортироваться на люк, в котором вы были в последний раз.\\n\\nПримечание: телепортация происходит НА люк, а не В люк.",
   "MinimalismInfoLong": "(Предатель):\\nКак Машина Для Убийств, вы можете ТОЛЬКО убивать. Зато, у вас экстремально маленькая перезарядка убийства.",
   "EscapeeInfoLong": "(Предатель):\\nКак Беглец, вы можете пометить определённую точку на карте, с помощью морфа/пета. После, вы можете телепортироваться к этой точке, снова морфнусь/погладив питомца.",
   "WitchInfoLong": "(Предатель):\\nКак Ведьма, вы можете убивать игроков обычным способом или проклиная. Проклятые игроки (и все остальные) узнают о проклятии на следующем собрании. Если вы не будете выкинуты на этом же собрании, проклятые игроки умрут.\\nПроклятые игроки помечаются знаком「†」.\\nСпособы проклятия и обычного убийства зависят от настроек.",
   "MafiaInfoLong": "(Предатель):\\nКак Возмездник, вы не можете убивать, если ваши тиммейты ещё живы. Однако, после своей смерти вы можете использовать /rv [id игрока], чтобы он мгновенно умер.",
   "GodfatherInfoLong": "(Предатель):\\nКак Крёстный, вы можете проголосовать за любого игрока, чтобы сделать его своей целью. Если кто-то убьёт вашу цель в следующем раунде, он превратится в Renegade.",
-  "PuppeteerInfoLong": "(Предатель):\\nКак Кукловод, вы можете проклясть игрока, чтобы он убил следующего подошедшего к нему не-предателя, если тот будет близко. Настройками можно полностью изменить работу Кукловода (например, Ленивый Парень, возможно, не захочет становиться вашей жертвой).",
+  "PuppeteerInfoLong": "(Предатель):\\nКак Кукловод, вы можете проклясть игрока, чтобы он убил следующего подошедшего к нему не-предателя, если тот будет близко. Настройками можно полностью изменить работу Кукловода (например, Ленивец, возможно, не захочет становиться вашей жертвой).",
   "TimeThiefInfoLong": "(Предатель):\\nКак Вор Времени, каждое ваше убийство сокращает собрание на указанное в настройках время. Если вы умрёте, время собраний будет восстановлено.",
   "SniperInfoLong": "(Предатель):\\nКак Снайпер, вы можете убивать игроков с очень большой дистанции.\\nЧтобы выстрелить в игрока с дальней дистанции, следуйте инструкции:\\n1. Морфнитесь в любой точке карты. Это будет место, откуда вы стреляете.\\n2. Затем, идите во вторую точку. Морфнитесь (или, если вы уже были в морфе, морфнитесь обратно в свой облик)/погладьте питомца во второй раз, чтобы задать направление выстрела.\\nСнаряд идёт от точки, где вы морфнулись в первый раз, до второй точки, пересекает её и идёт дальше до конца карты.\\n\\nПомните - вы не можете убивать нормальным способом до тех пор, пока у вас не закончатся патроны.",
   "EvilTrackerInfoLong": "(Предатель):\\nКак Злой Трекер, вы можете отслеживать игроков, морфясь в них. После морфа, на игрока, выбранного в меню морфа, будет указывать белая стрелка.\\n\\nВ зависимости от настроек, Злой Трекер также может видеть:\\n1. Где его цель была в последний раз перед началом собрания\\n2. Вспышку убийства, если его тиммейты кого-то убили\\n3. Красные стрелки на своих тиммейтов.",
@@ -667,7 +667,7 @@
   "UnderdogInfoLong": "(Предатель):\\nКак Аутсайдер, вы имеете большую перезарядку убийства до тех пор, пока определённое количество игроков живо.\\nКогда их станет меньше, ваша перезарядка убийства станет ниже.",
   "EvilDivinerInfoLong": "(Предатель):\\nКак Советник, вы можете раскрыть роль любого игрока, используя кнопку убийства. У вас ограниченное число раскрытий.\\n\\nОдно нажатие - раскрытие\\nДва нажатия - убийство\\n\\nЕсли у вас закончатся все раскрытия, кнопка убийства будет работать как обычно.",
   "LuckeyInfoLong": "(Член Экипажа):\\nКак Счастливчик, с некоторым шансом (зависит от настроек) вы выживите, если вас попытаются убить. Вы не узнаете о попытке убийства.",
-  "NeedyInfoLong": "(Член Экипажа):\\nКак Ленивый Парень, у вас всего лишь 1 короткий таск, а также вы игнорируете большинство способностей предателей, используемых на вас. При выпадении этой роли вы не можете получить дополнительные атрибуты.",
+  "NeedyInfoLong": "(Член Экипажа):\\nКак Ленивец, у вас всего лишь 1 короткий таск, а также вы игнорируете большинство способностей предателей, используемых на вас. При выпадении этой роли вы не можете получить дополнительные атрибуты.",
   "SuperStarInfoLong": "(Член Экипажа):\\nКак Суперзвезда, вас нельзя убить обычным способом, если кроме вас и убийцы в комнате есть ещё кто-то. В зависимости от настроек, все видят, что вы - Суперзвезда. Вас нельзя угадать.",
   "CyberStarInfoLong": "(Член Экипажа):\\nЧлены Экипажа (в зависимости от настроек и другие команды) видят вспышку и предупреждение, когда Знаменитость убивают.",
   "DemolitionistInfoLong": "(Член Экипажа):\\nКак Подрывник, если вас убьют, ваш убийца должен будет в течение определённого времени (время настраивается) прыгнуть в люк, иначе - смерть. В люке нужно быть до конца этого времени. Выпрыгнув раньше времени убийцу всё равно ждёт смерть.\\nПричина смерти при убийстве Подрывника - Подорван.",
@@ -680,7 +680,7 @@
   "SheriffInfoLong": "(Член Экипажа):\\nКак Шериф, вы - член экипажа, который может убивать предателей (а в зависимости от настроек и нейтралов тоже). Если вы попытаетесь убить члена экипажа/нейтрала, которого нельзя убивать (в зависимости от настроек), то совершите суицид. Также, в зависимости от настроек, вы можете убивать Безумцев, Зачарованных, Инфицированных, Завербованных и т.д. игроков.",
   "SnitchInfoLong": "(Член Экипажа):\\nКак Стукач, когда вы выполните все свои таски, вы будете видеть предателей (в зависимости от настроек, вы также будете способны видеть Безумцев и Нейтральных Убийц). Однако, за указанное в настройках количество тасков до выполнения их всех, убийцы получат стрелку на Стукача и будут уведомлены об угрозе.",
   "MarshallInfoLong": "(Член Экипажа):\\nКак Маршал, когда вы выполните все свои таски, члены экипажа (а в зависимости от настроек и другие фракции) будут видеть вас.\\n\\nВ зависимости от настроек, вас нельзя угадать после выполнения всех тасков.",
-  "SpeedBoosterInfoLong": "(Член Экипажа):\\nСкоростник увеличивает свою скорость, выполняя таски.\\nПримечание: по техническим причинам, остальные игроки видят передвижение Скоростника лагано.",
+  "SpeedBoosterInfoLong": "(Член Экипажа):\\nСкоростник увеличивает свою скорость, выполняя таски.",
   "DoctorInfoLong": "(Член Экипажа):\\nКак Доктор, вы можете просматривать пульсы из любой точки карты. Также вы видите причины смерти убитых.\\n\\nВ зависимости от настроек, все знают кто вы и не могут вас угадать.",
   "DictatorInfoLong": "(Член Экипажа):\\nКак Диктатор, вы можете мгновенно закончить собрание, проголосовав за кого-то. Этот кто-то будет немедленно выкинут, однако вы умрёте вместе с ним.",
   "DetectiveInfoLong": "(Член Экипажа):\\nКак Детектив, если вы самостоятельно зарепортите труп, то на собрании получите системное сообщение со следующей информацией: роль убитого, его атрибуты, сколько секунд назад он умер, роль его убийцы.\\n\\nВы необязательно получите в сообщении всё из вышеперечисленного. То, что вам покажут, зависит от настроек игры.",
@@ -809,7 +809,7 @@
   "RascalInfoLong": "(Атрибут Членов Экипажа):\\nИграя с данным атрибутом, для других вы выглядите как Безумец. Шериф может вас убить, Стукач видит вас как Безумца.",
   "SoullessInfoLong": "(Командный Атрибут):\\nПроклятая Душа украла у вас душу.\\n\\nИгра считает вас, как мёртвого.",
   "GravestoneInfoLong": "(Атрибут):\\nПосле вашей смерти на собраниях все будут видеть вашу роль.",
-  "LazyInfoLong": "(Атрибут):\\nКак Ленивый, у вас всего лишь 1 короткий таск, а также иммунитет ко многим способностям предателей.",
+  "LazyInfoLong": "(Атрибут):\\nКак Ленивый, вы слишком ленивы для того, чтобы приходить на собрания, так что после собрания вы остаётесь на том же месте, где и были до собрания. Кроме того, вы слишком ленивы для того, чтобы подчиняться способностям Колдуна, Кукловода, Гангстера и т.д.",
   "AutopsyInfoLong": "(Атрибут):\\nВрач видит причины смерти игроков.\\n\\nДоктор, Трассировщик, Учёный и Солнышко не могут стать Врачами.",
   "LoyalInfoLong": "(Атрибут):\\nЛояльный не может быть рекрутирован.\\n\\nНейтралы не могут получить этот атрибут.",
   "EvilSpiritInfoLong": "(Призрак):\\nВас убил Призыватель и вы стали Злым Духом! Теперь ваша задача - помочь Призывателю победить. \\nВы можете использовать кнопку защиты, чтобы заморозить игрока или уменьшить его зрение. Также вы можете выдать временный щит Призывателю.",
@@ -1119,6 +1119,8 @@
   "ConfirmEgoistOnEject": "Показывать <color=#5600ff>Эгоистов</color> при выкидывании",
   "ConfirmLoversOnEject": "Показывать <color=#ff9ace>Любовников</color> при выкидывании",
   "ShowTeamNextToRoleNameOnEject": "Показывать, какой команде принадлежит роль при выкидывании",
+  "HnSUnloadWarning": "<#ffff00><b>ВНИМАНИЕ:</b></color>\\nEHR не поддерживает ванильные Прятки и отключится, если вы зайдёте в этот режим.\\nДля игры вы можете использовать кастомные Прятки с ролями от EHR.",
+  "RejoinRequiredDueToVanillaSwitch": "Так как вы переключились на ванилу, вас отключило из лобби для избежания неполадок. Пожалуйста, перезайдите в это лобби.",
   "Addon": "Атрибут",
   "Ban": "Забанить",
   "Kick": "Кикнуть",
@@ -1265,7 +1267,7 @@
   "PuppeteerManipulationEndsAfterFixedTime": "Проклятие спадает через определённое время",
   "PuppeteerManipulationEndsAfterTime": "Время окончания действия проклятия",
   "PuppeteerManipulationBypassesLazy": "<color=#a4dffe>Ленивого</color> нельзя проклясть",
-  "PuppeteerManipulationBypassesLazyGuy": "<color=#a4dffe>Ленивого Парня</color> нельзя проклясть",
+  "PuppeteerManipulationBypassesLazyGuy": "<color=#a4dffe>Ленивца</color> нельзя проклясть",
   "PuppeteerPuppetCanKillImpostors": "Проклятый игрок может убить <color=#ff1919>Предателя</color>",
   "PuppeteerPuppetCanKillPuppeteer": "Проклятый игрок может убить <color=#ff1919>Кукловода</color>",
   "PuppeteerMaxPuppets": "Макс. кол-во проклятий",
@@ -1374,6 +1376,7 @@
   "LovingImpostorSpawnChance": "Шанс на появление <color=#ff9ace>Любовника</color>-<#ff1919>Предателя</color>",
   "LIRoleForOtherImps": "Другие <#ff1919>Предатели</color> видят <#ff9ace>Любовника</color>-<#ff1919>Предателя</color> как",
   "PrivateChat": "У <color=#ff9ace>Любовников</color> есть приватный чат <#ffff00>(ЭКСПЕРИМЕНТАЛЬНО)</color>",
+  "PrivateChatForLoversOnly": "Чат видят только Любовники <#ffff00>(ЕЩЁ БОЛЕЕ ЭКСПЕРИМЕНТАЛЬНО)</color>",
   "GuessAbility": "Угадыватели могут угадать <color=#ff9ace>Любовников</color>",
   "AddonCanBeGuessed": "Может быть угадан",
   "ConvertedAddonCanBeGuessed": "Атрибут {role} может быть угадан",
@@ -1555,6 +1558,7 @@
   "MessengerMessage.3": "Я - {0}",
   "MessengerTitle": "<#ff0000>Сообщение от {0}</color>",
   "DisableLobbyMusic": "Выключить музыку в лобби",
+  "EnableCommandHelper": "Включить помощника по командам",
   "Evolver": "Эволюционер",
   "EvolverInfo": "После каждого собрания вы получаете улучшение",
   "EvolverInfoLong": "(Нейтральный Убийца):\\nПосле каждого собрания Эволюционеру даётся на выбор несколько улучшений.\\n\\n<size=70%><b><u>Возможные улучшения:</u></b>\\n-Уменьшение отката убийства на 2,5с\\n-Зрение Предателей\\nУвеличенное зрение на 0,4x\\n-Увеличенная скорость на 0,25x\\n-Увеличенная дальность убийства (Короткая → Средняя → Большая)\\n-Способность прыгать в люк (и 1 использование люка)\\n- +3 использования люка\\n-Способность саботировать (и 1 саботаж)\\n- +2 саботажа\\n-Щит на раунд</size>\\n\\n<u><b>Дополнительно:</b></u>\\n-Кол-во использований люка отображает около никнейма как <b>(Л: x)</b>, где x - кол-во использований\\n-С кол-вом саботажей то же самое <b>(С: x)</b>, где x - кол-во саботажей\\n\\nЧтобы выбрать нужное улучшение (для прокрутки предложений), нужно гладить питомца. Выбранное улучшение автоматически активируется, когда таймер истечёт.",
@@ -1783,6 +1787,7 @@
   "DeathReason.Negotiation": "Наказан",
   "DeathReason.Trapped": "Ловушка",
   "DeathReason.Stung": "Ужален",
+  "DeathReason.Scavenged": "Падаль",
   "DeathReason.Meteor": "Метеорит",
   "DeathReason.Lava": "Лава",
   "DeathReason.Tornado": "Торнадо",
@@ -1797,6 +1802,8 @@
   "ND_DRLaughMessage.Drowned": "Хотели пить? Ну что ж, получите и распишитесь!",
   "ND_DRLaughMessage.Sunken": "А вы знали, что Титаник утонул из-за воронки? Это неправда. На самом деле утонули вы!",
   "ND_DRLaughMessage.Collapsed": "Разрушения зданий бывают не только в фильмах про апокалипсис, не знали?",
+  "LoversChatCannotTalkMsg": "Это чат только для <color=#ff9ace>Любовников</color>!",
+  "LoversChatCannotTalkTitle": "<#ffff00>⚠ ➡</color> <#ff0000>ВЫ НЕ МОЖЕТЕ ТУТ ПИСАТЬ</color> <#ffff00>⬅ ⚠</color>",
   "Alive": "Жив",
   "Win": " Победил!",
   "Last-": "Последний-",
@@ -2179,7 +2186,6 @@
   "Warning.NoModHost": "У хоста лобби не установлен мод EHR",
   "Warning.MismatchedVersion": "Версия EHR у <b>{0}</b> не соответствует версии у хоста <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "У хоста нету/есть другая версия {0}\\nВы будете кикнуты через {1}",
-  "Warning.OneMinuteLeft": "<#ffff00>Через 1 минуту лобби будет закрыто!</color>",
   "Commands.NoAccess": "У вас нет доступа к этой команде или вы не можете использовать эту команду сейчас",
   "CommandDescription.LT": "Показать таймер лобби",
   "CommandDescription.Dump": "Создать лог-файл на рабочем столе",
@@ -2746,7 +2752,7 @@
   "PlayerIsRole": "{0} был {1}.",
   "PlayerExiled": "{0} был выкинут...",
   "ExiledJester": "{1} {0} не был предателем...\\nНу вы даёте, как можно было повестись на такое\\nGG!",
-  "ExiledExeTarget": "Конечно, {0} был {1}\\nНо ведь от этого он не прекратил быть целью <color=#611c3a>Палача</color>!\\nGG!",
+  "ExiledExeTarget": "Конечно, {0} был(-а) {1}\\nНо ведь от этого он(-а) не прекратил(-а) быть целью <color=#611c3a>Палача</color>!\\nGG!",
   "ExiledInnocentTargetAddBelow": "\\nХм, что-то тут не так\\nТочно! Вы выкинули цель <color=#8f815e>Невинного</color>!",
   "ExiledInnocentTargetInOneLine": "{0} был {1}\\nНо что-то тут не так...\\nТочно! Вы выкинули цель <color=#8f815e>Невинного</color>!\\nGG!",
   "NoImpRemain": "<color=#777777><color=#ff1919>Предателей</color> больше не осталось</color>",
@@ -3483,7 +3489,7 @@
   "DrainerInfoLong": "(член Экипажа):\\nЕсли Сливщик прыгнет в люк, то все находящиеся в этом люке и все, кто находятся в люке, который связан с люком в который прыгнул Сливщик мгновенно умрут.",
   "CameraMan": "Камераман",
   "CameraManInfo": "Телепортируйтесь в комнату охраны",
-  "CameraManInfoLong": "(Член Экипажа):\\nКамераман может прыгнуть в люк/погладить питомца, чтобы мгновенно телепортироваться в комнату охраны.",
+  "CameraManInfoLong": "(Член Экипажа):\\nКамераман может прыгнуть в люк/погладить питомца, чтобы мгновенно телепортироваться в комнату охраны.\\nВ зависимости от настроек, если Камераман выйдет из охраны, его телепортирует туда, откуда он телепортировался в охрану.",
   "TPBackWhenMoveAway": "Телепортировать обратно при отходе от камер",
   "Echo": "Эхо",
   "EchoInfo": "Заставляйте игроков умирать самими там, где вы хотите!",
@@ -3762,7 +3768,7 @@
   "PostmanCorrectDeliver": "<color=#00ff00>Письмо доставлено</color>",
   "PostmanTargetDied": "<color=#ffff00>Ваша цель умерла</color>",
   "PostmanGetNewTarget": "Ваша новая цель - {0}.",
-  "PostmanDone": "\\n\\n<color=#00ff00>Все письма доставлены!\\nТы победишь с выигравшей командой.</color>",
+  "PostmanDone": "\\n\\n<color=#00ff00>Все письма доставлены!\\nВы победите с выигравшей командой.</color>",
   "PostmanTarget": "<color=#00ffa5>Цель:</color> <b>{0}</b>",
   "DeliverCooldown": "Откат доставки",
   "Reckless": "Бессердечник",
@@ -4164,8 +4170,8 @@
   "OngoingThunderstorm": "<#ffff44>⚠ Идёт Гроза ⚠</color>",
   "SurvivalTime": "Выжил {0}с",
   "NDPlayer": "Катаклизмы",
-  "NDPlayerInfo": "ПЕРЕЖИВИТЕ ВСЕ КАТАКЛИЗМЫ И ОСТАНЬТЕСЬ ПОСЛЕДНИМ ВЫЖИШВИМ",
-  "NDPlayerInfoLong": "ПЕРЕЖИВИТЕ ВСЕ КАТАКЛИЗМЫ И ОСТАНЬТЕСЬ ПОСЛЕДНИМ ВЫЖИШВИМ",
+  "NDPlayerInfo": "ПЕРЕЖИВИТЕ ВСЕ КАТАКЛИЗМЫ",
+  "NDPlayerInfoLong": "ПЕРЕЖИВИТЕ ВСЕ КАТАКЛИЗМЫ",
   "RoomRush": "Забег На Скорость",
   "ModeRoomRush": "Режим: Забег На Скорость",
   "ModeDescribe.RoomRush": "В режиме Забег На Скорость все игроки должны добраться до выбранной игрой комнаты как можно быстрее. Последний, кто добежит, выбывает и умирает. Последний выживший побеждает!\\nОднако есть 2 нюанса:\\n1. Есть лимит по времени, по которому если вовремя не добежать до комнаты, вы умрёте\\n2. Когда первые 2 игрока добегают до комнаты, лимит времени резко сокращается.\\nВ зависимости от настроек, игроки могут использовать люк лимитированное количество раз\\n\\nУдачи!",
@@ -4200,6 +4206,8 @@
   "TimeDecreaseOnShortTaskComplete": "Короткий таск уменьшает время на",
   "TimeDecreaseOnCommonTaskComplete": "Общий таск уменьшает время на",
   "TimeDecreaseOnLongTaskComplete": "Длинный таск уменьшает время на",
+  "TimeDecreaseOnSituationalTaskComplete": "Ситуативный таск уменьшает время на",
+  "TimeDecreaseOnOtherTaskComplete": "Не попадающий ни под одну из категорий таск уменьшает время на",
   "SeekerVision": "Зрение Искателя",
   "HiderVision": "Зрение Прячущегося",
   "SeekerSpeed": "Скорость Искателя",
@@ -4565,6 +4573,7 @@
   "AntidoteCDOpt": "Уменьшить откат на",
   "AntidoteCDReset": "Откат возвращается к нормальному значению после собрания",
   "HackButtonText": "Имитация",
+  "BomberCooldownsResetEachOther": "Откат убийства и откат бомбы сбрасывают друг друга после использования",
   "BomberDiesInExplosion": "<color=#ff1919>Бомбер</color> умирает от взрыва",
   "ImpostorsSurviveBombs": "<color=#ff1919>Предатели</color> выживают при взрыве бомбы",
   "NukeRadius": "Радиус взрыва (12x это очень много)",
