--- a/Resources/Lang/zh_CN.json
+++ b/Resources/Lang/zh_CN.json
@@ -1119,6 +1119,8 @@
   "ConfirmEgoistOnEject": "确认<color=#5600ff>利己主义者们</color>的数量",
   "ConfirmLoversOnEject": "确认<color=#ff9ace>恋人们</color>数量",
   "ShowTeamNextToRoleNameOnEject": "显示被驱逐的玩家的阵营",
+  "HnSUnloadWarning": "<#ffff00><b>WARNING:</b></color>\\nEHR doesn't support vanilla Hide And Seek and will unload if you enable it.\\nYou can use EHR's Custom Hide And Seek game mode with unique roles instead.",
+  "RejoinRequiredDueToVanillaSwitch": "You've decided to switch to vanilla mode, so it was required to disconnect you from the current game, or it would've caused issues. Please rejoin the game.",
   "Addon": "附加职业",
   "Ban": "封禁",
   "Kick": "踢出",
@@ -1374,6 +1376,7 @@
   "LovingImpostorSpawnChance": "<color=#ff9ace>爱上</color><#ff1919>内鬼</color>的概率",
   "LIRoleForOtherImps": "<#ff9ace>恋人</color> <#ff1919>内鬼</color>在其他<#ff1919>内鬼</color>眼里是:",
   "PrivateChat": "启用私人频道对于 <color=#ff9ace>恋人</color> <#ffff00>(非常不稳定!!!!)</color>",
+  "PrivateChatForLoversOnly": "Try Setting the Chat Visible Only for the Lovers Instead of Everyone <#ffff00>(EVEN MORE EXPERIMENTAL)</color>",
   "GuessAbility": "赌怪可以猜测 <color=#ff9ace>恋人</color>",
   "AddonCanBeGuessed": "可以被赌",
   "ConvertedAddonCanBeGuessed": "{role} 可以被猜测",
@@ -1555,6 +1558,7 @@
   "MessengerMessage.3": "我的职业是{0}",
   "MessengerTitle": "<#ff0000>.来讯{0}</color>",
   "DisableLobbyMusic": "禁用大厅音乐",
+  "EnableCommandHelper": "Enable Command Helper",
   "Evolver": "达尔文主义",
   "EvolverInfo": "每次会议结束后您都获得升级\n",
   "EvolverInfoLong": "(中立职业)：\\n作为达尔文主义，您可以在每次会议后选择一个升级。宠物可以在不同的可用升级之间刷新。 相同的升级可以出现多次。一旦计时器选择结束，您的升级将被应用。\\n\\n<size=70%><b><u>升级选项：</u></b>\\n- 减少击杀冷却时间(减少2.5 s)\\n- 夜视(不受灯关破坏影响)\\n- 增加视力(增加0.4x)\\n- 增速(增加0.25x)\\n- 增加击杀距离(短 → 中→ 长)\\n- 增加跳管能力(1 次使用机会)\\n- 增加管道使用限制(最大 3)\\n- 增加破坏能力( 1 次使用机会)\\n- 增加破坏使用限制(最大 2)\\n- 增益盾(在当前一轮中不会被杀)</size>\\n\\n<u><b>备注：</b></u>\\n如果您可以跳管， 您的通风口使用数量在角色名称旁边显示： <b>(V: 1)</b> - 与破坏使用限制相同： <b>(S: 2)</b>",
@@ -1783,6 +1787,7 @@
   "DeathReason.Negotiation": "谈判",
   "DeathReason.Trapped": "受困",
   "DeathReason.Stung": "刺痛",
+  "DeathReason.Scavenged": "Scavenged",
   "DeathReason.Meteor": "陨星坠落",
   "DeathReason.Lava": "熔岩",
   "DeathReason.Tornado": "龙卷风",
@@ -1797,6 +1802,8 @@
   "ND_DRLaughMessage.Drowned": "你渴了吗?没事,这里有水!",
   "ND_DRLaughMessage.Sunken": "你知道泰坦尼克号像现在这样沉没了吗?好吧,你做到了!",
   "ND_DRLaughMessage.Collapsed": "建筑物的倒塌不仅仅只是发生在关于世界末日的电影中,你不知道吗?",
+  "LoversChatCannotTalkMsg": "This is a chat for <color=#ff9ace>Lovers</color> only!",
+  "LoversChatCannotTalkTitle": "<#ffff00>⚠ ➡</color> <#ff0000>YOU CANNOT TALK HERE</color> <#ffff00>⬅ ⚠</color>",
   "Alive": "存活",
   "Win": " 胜利!",
   "Last-": "仅存的 ",
@@ -2179,7 +2186,6 @@
   "Warning.NoModHost": "房主没装EHR",
   "Warning.MismatchedVersion": "<b>{0}</b>和<b>{1}</b>具有不同版本",
   "Warning.AutoExitAtMismatchedVersion": "房主与{0}的版本不同\\n你将被踢出在{1}秒内",
-  "Warning.OneMinuteLeft": "<#ffff00>房间将在一分钟后强制关闭!</color>",
   "Commands.NoAccess": "您没有使用此命令的权限或当前无法使用它",
   "CommandDescription.LT": "查看大厅计时器",
   "CommandDescription.Dump": "将日志文件导出到桌面",
@@ -4200,6 +4206,8 @@
   "TimeDecreaseOnShortTaskComplete": "完成短任务时，减少游戏时间",
   "TimeDecreaseOnCommonTaskComplete": "当完成共同任务时，减少游戏时间",
   "TimeDecreaseOnLongTaskComplete": "完成长任务时，减少游戏时间：",
+  "TimeDecreaseOnSituationalTaskComplete": "When Completing a Situational Task, Reduce the Game Time by",
+  "TimeDecreaseOnOtherTaskComplete": "When Completing a Task That Doesn't Fit Any Category, Reduce the Game Time by",
   "SeekerVision": "特别设置寻找者的视野大小",
   "HiderVision": "特别设置藏匿者的视野大小",
   "SeekerSpeed": "特别设置寻找者的速度",
@@ -4565,6 +4573,7 @@
   "AntidoteCDOpt": "冷却时间减少",
   "AntidoteCDReset": "会议结束后冷却恢复正常",
   "HackButtonText": "宝箱怪",
+  "BomberCooldownsResetEachOther": "Kill Cooldown & Bomb Cooldown Reset Each Other When Used",
   "BomberDiesInExplosion": "<color=#ff1919>自爆兵</color>在爆炸中死亡",
   "ImpostorsSurviveBombs": "<color=#ff1919>内鬼</color>在爆炸中幸存",
   "NukeRadius": "打击半径(12x已经是大出天界了)",
