--- a/Resources/Lang/ru_RU.json
+++ b/Resources/Lang/ru_RU.json
@@ -2186,6 +2186,7 @@
   "Warning.NoModHost": "У хоста лобби не установлен мод EHR",
   "Warning.MismatchedVersion": "Версия EHR у <b>{0}</b> не соответствует версии у хоста <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "У хоста нету/есть другая версия {0}\\nВы будете кикнуты через {1}",
+  "EnabledGMWarning": "Вы включили режим Мастера Игры. Это сделает вас призраком в начале каждой игры. Из-за неизвестной проблемы игры могут мгновенно завершиться с причиной «Все погибли». Если это произойдет, пожалуйста, отключите режим Мастера Игры.",
   "Commands.NoAccess": "У вас нет доступа к этой команде или вы не можете использовать эту команду сейчас",
   "CommandDescription.LT": "Показать таймер лобби",
   "CommandDescription.Dump": "Создать лог-файл на рабочем столе",
