--- a/Resources/Lang/ko_KR.json
+++ b/Resources/Lang/ko_KR.json
@@ -2186,6 +2186,7 @@
   "Warning.NoModHost": "EHR is not installed on the host",
   "Warning.MismatchedVersion": "<b>{0}</b> has a different version than <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "The host has no or a different version of {0}\\nYou will be kicked in {1}",
+  "EnabledGMWarning": "You have enabled Game Master. This will make you a ghost at the start of every game. Due to an unknown issue, games may end with the 'Everyone died' reason instantly, if this happens, please disable Game Master.",
   "Commands.NoAccess": "You don't have access to this command or cannot use it currently",
   "CommandDescription.LT": "View the lobby timer",
   "CommandDescription.Dump": "Dumps the log file to the desktop",
