--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3040,6 +3040,15 @@
   "WhispererInfo.Role": "I was {0}",
   "WhispererInfo.KillerRole": "My killer was {0}",
   "WhispererQuestioning": "Questioning {0}... {1}%",
+  "Leery": "Leery",
+  "LeeryInfo": "Investigate Who Isn't a Crewmate",
+  "LeeryInfoLong": "(Crewmates):\\nAs the Leery, if you stand near someone for a few seconds (set by the host) (they must be the nearest player for the entire duration), and they're not a crewmate, you'll be notified.",
+  "Leery.Radius": "Maximum Distance to Stand Near Someone",
+  "Leery.Duration": "Time to Stand Near Someone",
+  "Leery.ShowNearestPlayerName": "Show Nearest Player's Name",
+  "Leery.ShowProgress": "Show Progress",
+  "LeeryNotify": "<#ffff00>The nearest player is not a crewmate!</color>",
+  "LeerySuffix": "<size=80%>Investigating {0}....</size>",
   "Hypnotist": "Hypnotist",
   "HypnotistInfo": "Prevent Body Reports",
   "HypnotistInfoLong": "(Impostors):\\nAs the Hypnotist, you can prevent all players from reporting bodies by using your ability (shapeshift/pet).",
