New add-on: Introvert (TOHO, lol) + some fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2350,6 +2350,7 @@
   "CrewmateRoles": "【 ★ Crewmate Roles ★ 】",
   "NeutralRoles": "<color=#ffab1b>【 ★ Neutral Roles ★ 】</color>",
   "AddonRoles": "<color=#ff9ace>【 ★ Add-ons ★ 】</color>",
+  "GhostRoles": "<color=#888888>【 ★ Ghost Roles ★ 】</color>",
   "LoadingHint.0": "Did you know?\nYou can put roles of your choice into custom teams!\nView instructions on our website (link on main menu)!",
   "LoadingHint.1": "Did you know?\nYou can force or ban certain role and add-on combos using /combo in lobby!\nGive it a try after this game!",
   "LoadingHint.2": "Did you know?\nYou can change roles', add-ons', settings', etc. names using custom translation files!",
@@ -3639,6 +3640,13 @@
   "PatrollerBoost.Vent": "<color=#00ffa5>you can vent</color>",
   "PatrollerBoost.Range": "you have <color=#00ffa5>higher kill range</color>",
   "PatrollerBoost.Sabotage": "<color=#00ffa5>you can sabotage</color>",
+  "Introvert": "Introvert",
+  "IntrovertInfo": "You Don't Like Being Near Players",
+  "IntrovertInfoLong": "(Add-ons):\\nAs the Introvert, if you stay near other players for too long, you teleport away to a random vent.",
+  "Prefix.Introvert": "Introvert",
+  "Introvert.Radius": "Radius in which players are considered nearby",
+  "Introvert.Time": "Time to be near players before teleporting",
+  "Introvert.Suffix": "<size=70%><#888888>Teleporting away in </color>{0}s</size>",
   "Hitman": "Hitman",
   "HitmanInfo": "Select your target",
   "HitmanInfoLong": "(Impostors):\\nAs the Hitman, you may shapeshift into someone to mark them as your target. If you kill your target, your next kill cooldown will be lower.\\n\\nNote: Once you chose a target, you cannot change it. You'll get a chance to mark a target again after killing your current target.",
