--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1788,6 +1788,7 @@
   "DeathReason.Trapped": "Trapped",
   "DeathReason.Stung": "Stung",
   "DeathReason.Scavenged": "Scavenged",
+  "DeathReason.Allergy": "Allergy",
   "DeathReason.Meteor": "Meteor Strike",
   "DeathReason.Lava": "Lava",
   "DeathReason.Tornado": "Tornado",
@@ -3329,6 +3330,12 @@
   "Vortex.IfTargetCannotBeTeleported": "If the target cannot be teleported to a random vent",
   "Vortex.NoTPMode.Block": "Cancel Kill",
   "Vortex.NoTPMode.DoWithoutTP": "Kill Without TP",
+  "Allergic": "Allergic",
+  "AllergicInfo": "You're Allergic to Someone",
+  "AllergicInfoLong": "(Add-ons):\\nAs the Allergic, you are allergic to a random player in the game. When you go near that player, your allergy level starts increasing. If it reaches 100%, you die. You must stay away from the player you're allergic to at all times.",
+  "Allergic.Time": "Time in which the allergy level goes from 0% to 100%",
+  "Allergic.Range": "Maximum distance from the target that is considered nearby",
+  "Allergic.Suffix": "<#ffff44><size=80%>Allergy Level:</color> {0}%</size>",
   "Enigma": "Enigma",
   "EnigmaInfo": "Get Clues about Killers",
   "EnigmaInfoLong": "(Crewmates):\\nAs the Enigma, you get a random clue about the killer each meeting, depending on the setting, you may have to report the body to receive a clue. The more tasks you complete the preciser the clues get.\\n\\n<size=70%><u><b>Light colors:</b></u> Red, Pink, Orange, Yellow, White, Cyan, Lime, Rose, Banana, Coral\\n<u><b>Dark colors:</b></u> Blue, Green, Black, Purple, Brown, Maroon, Gray, Tan</size>",
