Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1330,7 +1330,6 @@
   "ExecutionerCanTargetImpostor": "Can Target <color=#ff1919>Impostors</color>",
   "ExecutionerCanTargetNeutralKiller": "Can Target <color=#ffab1b>Neutral</color> <color=#ff1919>Killing</color>",
   "ExecutionerChangeRolesAfterTargetKilled": "When Target Dies, <color=#c0c0c0>Executioner</color> becomes",
-  "ExecutionerChangeRole": "Your role was changed to {0}",
   "CanTargetNeutralBenign": "Can Target <color=#ffab1b>Neutral</color> <color=#046300>Benign</color>",
   "CanTargetNeutralEvil": "Can Target <color=#ffab1b>Neutral</color> <color=#912900>Evil</color>",
   "SidekickSheriffCanGoBerserk": "<color=#00b4eb>Recruited</color> <color=#f8cd46>Sheriff</color> Can Go Nuts",
@@ -1339,7 +1338,7 @@
   "LawyerCanTargetCrewmate": "Can Target <color=#8cffff>Crewmates</color>",
   "LawyerCanTargetJester": "Can Target <color=#ec62a5>Jester</color>",
   "LawyerChangeRolesAfterTargetKilled": "When Target Dies, <color=#008080>Lawyer</color> becomes",
-  "LawyerChangeRole": "Your role was changed to {0}",
+  "LawyerChangeRole": "Your client is dead",
   "SerialKillerLimit": "Time Until Suicide",
   "ArsonistDouseTime": "Douse Duration",
   "CanTerroristSuicideWin": "Can Win By Suicide",
@@ -1387,6 +1386,7 @@
   "TrapperBlockMoveTime": "Freeze time",
   "RogueKnowEachOtherRoles": "<color=#696969>Rogues</color> know the roles of each other",
   "RogueKnowEachOther": "<color=#696969>Rogues</color> know each other",
+  "RoleChangedNotify": "<size=120%><#ffff00>⚠</color> Your role was changed to {0} <#ffff00>⚠</color></size>",
   "TimeThiefDecreaseMeetingTime": "Lower Meeting Time by",
   "TimeThiefLowerLimitVotingTime": "Minimum Voting Time",
   "TimeThiefReturnStolenTimeUponDeath": "Return Stolen Time Upon Death",
@@ -2028,7 +2028,7 @@
   "MediumshiperKnowPlayerDead": "Someone died somewhere",
   "TicketsStealerGetTicket": "You've got +{0} votes",
   "BecomeMadmateCuzMadmateMode": "You became a Madmate because you died",
-  "ExecutionerRoleChanged": "You became {0} because your target died",
+  "ExecutionerRoleChanged": "Your target died",
   "SpeedBoosterTaskDone": "Your speed is {0} now",
   "SpeedBoosterSpeedLimit": "You reached your maximum speed (3x)",
   "CleanerCleanBody": "The body has been cleaned",
